--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,7 @@
 <head>
 	<head>
 		<title>Information Technology Page</title>
+<link href="styles.css" rel= "stylesheet" type = "text/css"/>
 	</head>
 	<body>
 		<h1>Computer Technologies</h1>
